--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,22 @@ a:hover {
     color: #535bf2;
 }
 
-body {
+/* body {
     margin: 0;
     display: flex;
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
+} */
+
+body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    -webkit-overflow-scrolling: none;
+    overscroll-behavior: none;
+    touch-action: none;
 }
 
 h1 {
